# chess

./: .clang-format  .gitignore  CMakeLists.txt  run.sh
.cache/clangd/index/: main.cpp.02A7522C5B859F82.idx
src/: main.cpp
